styles/pages/contact.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

/* This is for accessibility purposes */

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border: 0;
}

/* Contact Form Section */

.contact,
header {
  background-color: #edf3f8;
}

.contact h1 {
  text-align: center;
  font-family: var(--font-title);
  font-size: 32px;
  color: var(--color-secondary-title-text);
  letter-spacing: 0.25px;
  width: 327px;
  height: 116px;
  margin: 0 auto;
  font-weight: 300;
  line-height: 36px;
}

.contact-form {
  width: 327px;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
}

.contact-form input::placeholder,
.contact-form textarea::placeholder {
  font-family: var(--font-text);
  font-size: 15px;
  letter-spacing: 0.12px;
  line-height: 25px;
  color: var(--color-secondary-title-text);
  padding-left: 20px;
  opacity: 50%;
}

.contact-form input,
.contact-form textarea {
  border: none;
  border-bottom: 1px solid
    color-mix(in srgb, var(--color-secondary-title-text) 50%, transparent);
  background: transparent;
  padding-bottom: 22px;
  padding-top: 24px;
}

.contact-form textarea {
  resize: none;
}

.contact-check {
  margin: 24px 0;
  font-family: var(--font-text);
  font-size: 15px;
  line-height: 25px;
  text-align: left;
  color: var(--color-secondary-title-text);
  letter-spacing: 0.12px;
  display: flex;
  align-items: center;
  gap: 24px;
}

.contact-check input[type="checkbox"] {
  appearance: none;
  width: 24px;
  height: 24px;
  background-color: var(--color-secondary-title-text);
  opacity: 0.25;
  flex-shrink: 0;
  margin: 0;
  padding: 0;
}

.contact button {
  border: 1px solid var(--color-secondary-title-text);
  border-radius: 24px;
  padding: 16px 49px 15px 51px;
  background-color: #edf3f8;
  font-family: var(--font-text);
  font-size: 15px;
  font-weight: bold;
  color: var(--color-secondary-title-text);
  width: 152px;
  margin-bottom: 42px;
}

/* Email validation error check */

#email.error {
  border-bottom-color: var(--color-secondary-warning);
  opacity: 0.5;
}

#email.error::placeholder {
  color: var(--color-secondary-warning);
}

.email-error {
  color: var(--color-secondary-warning);
  font-family: var(--font-text);
  font-size: 11px;
  letter-spacing: 0.08px;
  line-height: 15px;
  margin-top: 8px;
  margin-left: 20px;
  opacity: 0.5;
  display: none;
}

.email-error.show {
  display: block;
}

/* Lower contact form section */

header {
  padding-inline: 24px;
}

.hidden-text {
  display: none;
}

.contact {
  padding: 0px 24px 0px 25px;
  background-color: #edf3f8;
}

.contact-logos {
  justify-items: center;
  padding: 42px 0 83px 0;
}

.contact-logos h2 {
  color: var(--color-secondary-title-text);
  font-size: 24px;
  line-height: 32px;
  letter-spacing: -0.18px;
  font-family: var(--font-title);
  text-align: center;
  opacity: 0.75;
  padding-bottom: 24px;
}

.logos-grid {
  width: 279px;
  height: 154px;
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 20px;

  align-items: center;
}

.logo {
  min-width: 0;
  display: grid;
  justify-items: center;
}
.logo img {
  transform: scale(0.8);
}

.logos-grid .logo:nth-child(2n + 1) img {
  transform-origin: left center;
}

.logos-grid .logo:nth-child(2n) img {
  transform-origin: center;
}

.logos-grid .logo:nth-child(4) img {
  transform-origin: right center;
}

/* Tablet Design */

@media (min-width: 768px) {
  .logos-grid {
    width: 541px;
    height: 104px;
    grid-template-columns: 1fr 1fr 1fr;
    gap: 40px;
  }

  .logos-grid .logo img {
    transform: none;
    transform-origin: center;
  }

  .logo img {
    width: 100%;
    max-width: 100%;
    display: block;
  }

  .contact-logos {
    padding: 42px 0 106px 0;
  }

  .contact-logos h2 {
    width: 445px;
    padding: 0 10px 32px 10px;
  }

  .logos-grid .logo:nth-child(3n + 1) {
    justify-self: start;
  }

  .logos-grid .logo:nth-child(3n + 2) {
    justify-self: center;
  }

  .logos-grid .logo:nth-child(3n) {
    justify-self: end;
  }

  /* Contact Form */

  .contact h1 {
    font-size: 48px;
    width: 573px;
    height: 178px;
    line-height: 56px;
    letter-spacing: 0.37px;
    padding: 0 20px;
  }

  .contact-form {
    width: 445px;
  }
}

/* Desktop Design */

@media (min-width: 1440px) {
  .hidden-text {
    display: inline;
  }
  .contact-form {
    display: flex;
    flex-direction: column;
  }

  .logos-grid {
    justify-items: center;
  }

  .contact-inner {
    display: flex;
    gap: 124px;
    padding: 0 165px;
    justify-content: space-between;
  }
  .contact-logos {
    display: flex;
    flex-direction: column;
    justify-content: left;
  }

  .contact-logos h2 {
    text-align: left;
    padding: 0 0 32px 0;
  }

  /* Contact Form */

  .contact h1 {
    font-size: 56px;
    text-align: left;
    width: 730px;
    height: 133px;
    margin-left: 165px;
  }

  .contact-check input[type="checkbox"]:checked {
    background-color: var(--color-primary-pink);
    opacity: 1;
    position: relative;
  }

  .contact-check input[type="checkbox"]:checked::after {
    content: "";
    position: absolute;
    left: 7px;
    top: 3px;
    width: 6px;
    height: 10px;
    border: solid white;
    border-width: 0 2px 2px 0;
    transform: rotate(45deg);
  }

  .contact button,
  .contact-check input[type="checkbox"],
  .contact-form input,
  .contact-form textarea {
    cursor: pointer;
  }

  .contact button:hover {
    background-color: var(--color-secondary-title-text);
    color: var(--color-primary-white);
  }
}

